# AI-201-prectice

./: README.md
SimpleFlow/: README.md
SimpleFlow/src/SimpleFLow/: main1.py
pr1/: .env  README.md  fun_fact.md  pyproject.toml
pr1/src/pr1/: main.py  main1.py
