[project]
name = "pr1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mumtaz Ali", email = "mumtazalipintto@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.108.0",
    "litellm>=1.60.2",
    "python-dotenv>=1.0.0"
]

[project.scripts]
pr1 = "pr1:main"
piaic = "pr1.main:kickoff"
chain_prompt = "pr1.main1:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
